# ClientServerOnThrift

./: .gitignore  CMakeLists.txt  my.thrift  readme
client/: CMakeLists.txt  main.c
server/: CMakeLists.txt  main.c  main.cpp
